# stamped-external

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PHASE_L5_ARCHITECTURE_COMPLETION.md  PHASE_L5_OPS_FIRST_COMPLETION.md  PHASE_L6_A_AUTHORITY_COMPLETION.md  PHASE_L6_B_UX_CHARTER_COMPLETION.md  PHASE_L6_C_REFERENCE_SEED_COMPLETION.md  PHASE_L6_D_HANDOFF_COMPLETION.md  PHASE_L6_N_HARDENING_COMPLETION.md  PHASE_N_COMPLETION.md  PROGRESS.md  README.md  REPOS.md  SUBMODULE.md  index.html  skills-manifest.json
consumers/stamped-l3-core/: PROGRESS.md  README.md  pyproject.toml
consumers/stamped-l3-core/src/stamped_l3_core/: __init__.py  detection_lane.py  lab_export.py  outbox.py  rulepack_loader.py  scheduler.py  suppression.py
consumers/stamped-l3-core/src/stamped_l3_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
consumers/stamped-l3-core/tests/fixtures/: incomer_rulepack.json  l2_incomer_spike.json
consumers/stamped-l3-core/tests/golden/: test_md_finding.py
consumers/stamped-l3-core/tests/unit/: test_attribution_shadow.py  test_detection_lane.py  test_lab_export.py  test_md.py  test_outbox.py  test_scheduler_lab.py  test_suppression.py  test_timesfm_shadow.py
consumers/stamped-l3-eval/: DECISIONS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PHASE_N_COMPLETION.md  PRODUCT.md  PROGRESS.md  README.md  pyproject.toml
consumers/stamped-l3-eval/artifacts/golden/: run_w-md-001.json  run_w-pf-001.json  run_w-tod-001.json
consumers/stamped-l3-eval/corpus/v0/: windows.json
consumers/stamped-l3-eval/schemas/: run-artifact.v1.json
consumers/stamped-l3-eval/src/stamped_l3_eval/: __init__.py  artifact.py  cli.py  live_client.py
consumers/stamped-l3-eval/tests/: test_cli.py  test_cli_lab.py  test_live_client.py  test_run_artifact.py
consumers/stamped-l3-eval/ui/: middleware.ts  package.json  pnpm-lock.yaml
consumers/stamped-l3-eval/ui/app/: globals.css  layout.tsx  page.tsx
consumers/stamped-l3-eval/ui/components/: CompareClient.tsx  LiveClient.tsx  Nav.tsx  (+1 more)
consumers/stamped-l3-rulepacks/: DECISIONS.md  IMPLEMENTATION_PLAN.md  PHASE_N_COMPLETION.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
consumers/stamped-l3-rulepacks/docs/: AUTHORING.md
consumers/stamped-l3-rulepacks/fixtures/: golden_md_spike.json
consumers/stamped-l3-rulepacks/schemas/: catalog_index.json  rule-file.schema.json  rulepack-manifest.schema.json
consumers/stamped-l3-rulepacks/shared/: suppressions.yaml
consumers/stamped-l3-rulepacks/tariffs/: _schema.yaml
consumers/stamped-l3-rulepacks/tests/: test_catalog_coverage.py  test_golden_replay.py  test_manifest_schema.py
consumers/stamped-l4/: README.md  pyproject.toml
(+325 files in other folders)
