[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stamped-l3-core"
version = "0.1.0"
description = "Stamped L3 intelligence engine — MD/PF engines, suppression, outbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
challenger = ["timesfm>=2.0.2"]

[project.scripts]
stamped-l3-lab = "stamped_l3_core.lab_export:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
