[project]
name = "stamped-l3-eval"
version = "0.2.0"
description = "L3 golden corpus, backtest CLI, and Internal Lab UI support"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
]

[project.scripts]
stamped-l3-eval = "stamped_l3_eval.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
