[project]
name = "stamped-l3-rulepacks"
version = "1.0.0"
description = "L3 semver rulepack artifacts (incomer MD/PF/TOD)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
