[project]
name = "stamped-l4"
version = "0.1.0"
description = "L4 template-fast-path — Finding → Prescription without LLM"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stamped_l4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
